search bar visibility fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@ $color-blue-very-dark: rgb(38, 64, 87);
 $color-blue: rgb(95, 152, 205);
 $color-blue-darkened: rgb(88, 141, 191);
 $color-blue-light: rgb(178, 218, 255);
+$color-blue-grayish: rgb(74, 98, 123);
 $color-green-electric: rgb(96, 173, 133);
 $color-yellow-pale: rgb(230, 190, 119);
 $color-yellow-orangy: rgb(193, 129, 87);
@@ -122,6 +123,7 @@ h6 {
     background-color: $color-white;
     border-radius: $border-radius-small;
     box-shadow: $box-shadow-right-bottom;
+    z-index: 99;
 
     &_column {
         flex-direction: column;
@@ -151,6 +153,19 @@ h6 {
         padding: 0.3rem 1.5rem;
         background-color: $color-blue;
         border-radius: $border-radius-small $border-radius-small 0 0;
+    }
+    &_blue {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        width: 15rem;
+        height: 17rem;
+        background-color: $color-blue-grayish;
+        border-radius: $border-radius-small;
+        box-shadow: $box-shadow-right-bottom;
+        z-index: 4;
+        top: 41rem;
+        left: 12rem;
     }
 }
 
@@ -271,15 +286,14 @@ h6 {
         border: 2px solid $color-blue-light;
     }
     &:hover input ~ &__checkmark {
-        transition: all 400ms;
+        transition: all 200ms;
         border: 2px solid $color-white;
     }
 }
 .checkbox:has(input:checked) ~ label {
-    transition-property: opacity, left;
-    transition-duration: 200ms;
-    opacity: 0;
-    left: 2rem;
+    transition: all 200ms ease-in;
+    visibility: hidden;
+    left: 2.8rem;
 }
 
 .search-bar {
@@ -295,12 +309,11 @@ h6 {
     font-size: $font-size-very-very-small;
 
     &__label {
-        transition-property: left, opacity;
-        transition-duration: 300ms;
+        transition: all 200ms ease-in;
         position: absolute;
         top: 0.9rem;
         left: 1rem;
-        opacity: 100;
+        visibility: visible;
     }
 }
 
@@ -372,17 +385,16 @@ h6 {
 
 .menu-burger {
     &__2 {
+        z-index: 66;
         position: relative;
         cursor: pointer;
         top: -0.3rem;
 
         &:hover {
-            transition: all 300ms ease-in;
             background-color: $color-white;
         }
         &:hover::before,
         &:hover::after {
-            transition: all 200ms ease-in;
             background-color: $color-white;
         }
 
